Adapt to java 1.8